Added Federated Learning Core Functions

--- a/Green-Federated-Learning.ipynb
+++ b/Green-Federated-Learning.ipynb
@@ -281,7 +281,76 @@
     "    def __getitem__(self, index):\n",
     "        return self.subset[index]\n",
     "    def __len__(self):\n",
-    "        return len(self.subset)\n"
+    "        return len(self.subset)\n",
+    "# --- 4. Federated Learning Core Functions ---\n",
+    "\n",
+    "def client_update(client_model, optimizer, train_loader, global_model_state, epochs):\n",
+    "    \"\"\"\n",
+    "    This function performs the local training for a client.\n",
+    "    It implements the FedProx algorithm.\n",
+    "    \"\"\"\n",
+    "    client_model.train()\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        for data, target in train_loader:\n",
+    "            optimizer.zero_grad()\n",
+    "            output = client_model(data)\n",
+    "\n",
+    "            # Standard Cross-Entropy Loss\n",
+    "            loss = criterion(output, target)\n",
+    "\n",
+    "            # --- FedProx Proximal Term ---\n",
+    "            # This is the key addition that prevents client drift.\n",
+    "            # It adds a penalty if the client's model moves too far from the global model.\n",
+    "            proximal_term = 0.0\n",
+    "            for client_param, global_param in zip(client_model.parameters(), global_model_state.values()):\n",
+    "                proximal_term += torch.sum((client_param - global_param) ** 2)\n",
+    "\n",
+    "            loss += (CONFIG[\"mu\"] / 2) * proximal_term\n",
+    "\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "    return client_model.state_dict()\n",
+    "\n",
+    "def server_aggregate(global_model, client_updates, client_lens):\n",
+    "    \"\"\"\n",
+    "    This function aggregates the client model updates into a new global model.\n",
+    "    It performs weighted averaging based on the number of data samples each client has.\n",
+    "    \"\"\"\n",
+    "    total_samples = sum(client_lens)\n",
+    "    global_state_dict = global_model.state_dict()\n",
+    "\n",
+    "    # Zero out the global model's state\n",
+    "    for key in global_state_dict:\n",
+    "        global_state_dict[key] = torch.zeros_like(global_state_dict[key])\n",
+    "\n",
+    "    # Weighted average of client updates\n",
+    "    for i, client_update in enumerate(client_updates):\n",
+    "        weight = client_lens[i] / total_samples\n",
+    "        for key in global_state_dict:\n",
+    "            global_state_dict[key] += client_update[key] * weight\n",
+    "\n",
+    "    global_model.load_state_dict(global_state_dict)\n",
+    "    return global_model\n",
+    "\n",
+    "def test(model, test_loader):\n",
+    "    \"\"\"Evaluates the global model on the test dataset.\"\"\"\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    correct = 0\n",
+    "    criterion = nn.CrossEntropyLoss(reduction='sum')\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_loader:\n",
+    "            output = model(data)\n",
+    "            test_loss += criterion(output, target).item()\n",
+    "            pred = output.argmax(dim=1, keepdim=True)\n",
+    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "\n",
+    "    test_loss /= len(test_loader.dataset)\n",
+    "    accuracy = 100. * correct / len(test_loader.dataset)\n",
+    "    return test_loss, accuracy\n"
    ]
   },
   {
